--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,11 +1,12 @@
 <header class="page__header header">
   <div class="header__container container">
-    <!-- <div class="header__logo">
+    <a type="button" href="#" data-popup="#popup">Я открываю попап</a>
+    <div class="header__logo">
       <a href="" class="logo"><img src="#" alt="" /> </a>
     </div>
     <div class="header__menu menu">
       @@include('./burger.htm',{})
-      <nav class="menu__body">
+      <!-- <nav class="menu__body">
         <ul class="menu__list">
           <li class="menu__item">
             <a href="#" class="menu__link"></a>
@@ -23,7 +24,7 @@
             <a href="#" class="menu__link"></a>
           </li>
         </ul>
-      </nav>
-    </div> -->
+      </nav> -->
+    </div>
   </div>
 </header>
