--- a/src/html/burger.htm
+++ b/src/html/burger.htm
@@ -1,4 +1,4 @@
-<!-- <button type="button" class="menu__icon icon-menu">
+<button type="button" class="menu__icon icon-menu">
   <svg
     class="ham hamRotate ham1"
     viewBox="0 0 100 100"
@@ -15,4 +15,4 @@
       d="m 30,67 h 40 c 12.796276,0 15.357889,-11.717785 15.357889,-26.851538 0,-15.133752 -4.786586,-27.274118 -16.667516,-27.274118 -11.88093,0 -18.499247,6.994427 -18.435284,17.125656 l 0.252538,40"
     />
   </svg>
-</button> -->
+</button>
