--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
       <main class="page__main main">@@include('html/_about.htm',{})</main>
       @@include('html/_footer.htm',{})
     </div>
-    @@include('html/_popup.htm',{}) @@include('html/_js.htm',{})
+    @@include('html/_js.htm',{})
   </body>
 </html>
