--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,30 +1,28 @@
 <header class="page__header header">
   <div class="header__container container">
-    <a type="button" href="#" data-popup="#popup">Я открываю попап</a>
     <div class="header__logo">
-      <a href="" class="logo"><img src="#" alt="" /> </a>
+      <a href="" class="logo"
+        ><img src="../img/logo__home.svg" width="50px" height="50px" alt="" />
+      </a>
     </div>
     <div class="header__menu menu">
       @@include('./burger.htm',{})
-      <!-- <nav class="menu__body">
+      <nav class="menu__body">
         <ul class="menu__list">
           <li class="menu__item">
-            <a href="#" class="menu__link"></a>
+            <a href="#" class="menu__link">About me</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link"></a>
+            <a href="#" class="menu__link">Skills</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link"></a>
+            <a href="#" class="menu__link">Portfolio</a>
           </li>
           <li class="menu__item">
-            <a data-goto=".news" href="#" class="menu__link"></a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link"></a>
+            <a data-goto=".news" href="#" class="menu__link">Contacts</a>
           </li>
         </ul>
-      </nav> -->
+      </nav>
     </div>
   </div>
 </header>
