--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('html/_head.htm',{ "title":"Tasktracker" })
+  @@include('html/_head.htm',{ "title":"Portfolio" })
   <body>
     <div class="wrapper">
       @@include('html/_popup.htm',{}) @@include('html/_header.htm',{})
-      <main class="page__main main">@@include('html/_about.htm',{})</main>
+      <main class="page__main main">
+        @@include('html/_inner.htm',{})@@include('html/_about.htm',{})
+      </main>
       @@include('html/_footer.htm',{})
     </div>
     @@include('html/_js.htm',{})
