Finishing the footer

--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,3 +1,21 @@
 <footer class="footer">
-  <div class="footer__container container"></div>
+  <div class="footer__container container">
+    <div class="footer__wrap">
+      <h2 class="footer__title">Contacts</h2>
+      <div class="footer__row">
+        <div class="footer__subtitle">
+          Want to know more or just chat? You are welcome!
+        </div>
+        <div class="footer__button">
+          <button class="btn">Send message</button>
+        </div>
+      </div>
+      <div class="footer__row">
+        <div class="footer__icon icon">
+          <div class="icon__item"><img src="#" alt="" /></div>
+        </div>
+        <div class="footer__text"></div>
+      </div>
+    </div>
+  </div>
 </footer>
