--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <div class="wrapper">
       @@include('html/_popup.htm',{}) @@include('html/_header.htm',{})
       <main class="page__main main">
-        @@include('html/_inner.htm',{})@@include('html/_about.htm',{})
+        @@include('html/_inner.htm',{}) @@include('html/_about.htm',{})
+        @@include('html/_skills.htm',{}) @@include('html/_portfolio.htm',{})
       </main>
       @@include('html/_footer.htm',{})
     </div>
