--- a/src/html/_inner.htm
+++ b/src/html/_inner.htm
@@ -2,16 +2,14 @@
   <div class="inner__container container">
     <div class="inner__body">
       <div class="inner__text">
-        <h1 class="inner__title">Igor Ponomarev</h1>
-        <p class="inner__subtitle">
-          UX | UI Frontend-Developer 30 years old, Russia
-        </p>
+        <h1 class="inner__title">Denis Novik</h1>
+        <p class="inner__subtitle">UX | UI designer 24 years old, Minsk</p>
         <div class="inner__lang">
-          <span>RU | ENG</span>
+          <span class="lang__gray">RU</span><span>|</span><span> ENG</span>
         </div>
       </div>
       <div class="inner__image">
-        <img src="../img/inner__image.jpg" alt="" />
+        <img src="../img/inner__image.jpg" alt="Avatar" />
       </div>
     </div>
   </div>
