setting in popup

--- a/src/html/_inner.htm
+++ b/src/html/_inner.htm
@@ -4,8 +4,10 @@
       <div class="inner__text">
         <h1 class="inner__title">Denis Novik</h1>
         <p class="inner__subtitle">UX | UI designer 24 years old, Minsk</p>
-        <div class="inner__lang">
-          <span class="lang__gray">RU</span><span>|</span><span> ENG</span>
+        <div class="inner__lang lang">
+          <span class="lang__gray">RU</span>
+          <span>|</span>
+          <span> ENG</span>
         </div>
       </div>
       <div class="inner__image">
