--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,20 +1,31 @@
-<footer class="footer">
+<footer class="page__footer footer">
   <div class="footer__container container">
     <div class="footer__wrap">
       <h2 class="footer__title">Contacts</h2>
-      <div class="footer__row">
-        <div class="footer__subtitle">
-          Want to know more or just chat? You are welcome!
+      <div class="footer__subtitle">
+        Want to know more or just chat? You are welcome!
+      </div>
+      <div class="footer__button">
+        <button class=" btn popup" >Send message</button>
+      </div>
+
+      <div class="footer__icon icon">
+        <div class="icon__item">
+          <img src="../img/footer-icon-linkedin.svg" alt="" />
         </div>
-        <div class="footer__button">
-          <button class="btn">Send message</button>
+        <div class="icon__item">
+          <img src="../img/footer-icon-insta.svg" alt="" />
+        </div>
+        <div class="icon__item">
+          <img src="../img/footer-icon-behance.svg" alt="" />
+        </div>
+        <div class="icon__item">
+          <img src="../img/footer-icon-rambler.svg" alt="" />
         </div>
       </div>
-      <div class="footer__row">
-        <div class="footer__icon icon">
-          <div class="icon__item"><img src="#" alt="" /></div>
-        </div>
-        <div class="footer__text"></div>
+      <div class="footer__text">
+        <p>Like me on</p>
+        <p>LinkedIn, Instagram, Behance, Dribble</p>
       </div>
     </div>
   </div>
