--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
   @@include('html/_head.htm',{ "title":"Portfolio" })
   <body>
     <div class="wrapper">
-      @@include('html/_popup.htm',{}) @@include('html/_header.htm',{})
+      @@include('html/_header.htm',{})
       <main class="page__main main">
         @@include('html/_inner.htm',{}) @@include('html/_about.htm',{})
         @@include('html/_skills.htm',{}) @@include('html/_portfolio.htm',{})
       </main>
-      @@include('html/_footer.htm',{})
+      @@include('html/_popup.htm',{}) @@include('html/_footer.htm',{})
     </div>
     @@include('html/_js.htm',{})
   </body>
