--- a/src/html/_inner.htm
+++ b/src/html/_inner.htm
@@ -1,6 +1,7 @@
 <section class="page__inner inner" id="inner">
   <div class="inner__container container">
     <div class="inner__body">
+      @@include('./burger.htm',{})
       <div class="inner__text">
         <h1 class="inner__title">Denis Novik</h1>
         <p class="inner__subtitle">UX | UI designer 24 years old, Minsk</p>
