--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         @@include('html/_inner.htm',{}) @@include('html/_about.htm',{})
         @@include('html/_skills.htm',{}) @@include('html/_portfolio.htm',{})
       </main>
-      @@include('html/_popup.htm',{}) @@include('html/_footer.htm',{})
+      @@include('html/_footer.htm',{})
     </div>
     @@include('html/_js.htm',{})
   </body>
