--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -6,11 +6,14 @@
       </a>
     </div>
     <div class="header__menu menu">
-      @@include('./burger.htm',{})
+
       <nav class="menu__body">
         <ul class="menu__list">
+          <li  class="menu__item">
+            <a href="#" class="menu__link">Home</a>
+          </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">About me</a>
+            <a href="#about" class="menu__link">About me</a>
           </li>
           <li class="menu__item">
             <a href="#" class="menu__link">Skills</a>
@@ -19,7 +22,7 @@
             <a href="#" class="menu__link">Portfolio</a>
           </li>
           <li class="menu__item">
-            <a data-goto=".news" href="#" class="menu__link">Contacts</a>
+            <a  href="#" class="menu__link">Contacts</a>
           </li>
         </ul>
       </nav>
