--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,4 @@
-<footer class="page__footer footer">
+<footer class="page__footer footer" id="footer">
   <div class="footer__container container">
     <div class="footer__wrap">
       <h2 class="footer__title">Contacts</h2>
