--- a/src/html/_portfolio.htm
+++ b/src/html/_portfolio.htm
@@ -1,4 +1,4 @@
-<div class="page__works works">
+<div class="page__works works" id="portfolio">
   <div class="works__container container">
     <h2 class="works__title">Portfolio</h2>
     <div class="works__wrap">
