--- a/src/html/_skills.htm
+++ b/src/html/_skills.htm
@@ -1,4 +1,4 @@
-<section class="page__skills skills">
+<section class="page__skills skills" id="skills">
   <div class="skills__container container">
     <div class="skills__body">
       <div class="skills__text">
