--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -7,22 +7,22 @@
     </div>
     <div class="header__menu menu">
 
-      <nav class="menu__body">
+      <nav class="menu__body" >
         <ul class="menu__list">
           <li  class="menu__item">
             <a href="#" class="menu__link">Home</a>
           </li>
           <li class="menu__item">
-            <a href="#about" class="menu__link">About me</a>
+            <a   href="#about" class="menu__link">About me</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">Skills</a>
+            <a href="#skills" class="menu__link">Skills</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">Portfolio</a>
+            <a href="#portfolio" class="menu__link">Portfolio</a>
           </li>
           <li class="menu__item">
-            <a  href="#" class="menu__link">Contacts</a>
+            <a  href="#footer" class="menu__link">Contacts</a>
           </li>
         </ul>
       </nav>
