--- a/src/html/burger.htm
+++ b/src/html/burger.htm
@@ -1,9 +1,9 @@
 <button type="button" class="menu__icon icon-menu">
   <svg
-    class="ham hamRotate ham1"
+    class="ham hamRotate ham1" id="hamRotate"
     viewBox="0 0 100 100"
     width="100"
-    onclick="this.classList.toggle('active')"
+
   >
     <path
       class="line top"
